feat(category-service, product-service): add metadata to CategoryAttribute, update Product and ProductSearch configs
- Added metadata fields to CategoryAttribute for better product filtering
- Updated Product model to include new attributes and category references
- Configured ProductSearchService for advanced filtering by category, price, and attributes
- Adjusted Elasticsearch mappings to support exact match on string attributes